experimental/parser/testdata/parser/package/options.proto.stderr.txt
error: `package` declaration cannot specify compact options
  --> testdata/parser/package/options.proto:3:14
   |
 3 | package test [(not.allowed) = "here"];
   |              ^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this

encountered 1 error
